--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/style.scss
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/style.scss
@@ -1,69 +1,67 @@
-.main-menu{position: relative;
+.main-menu {
+    position: relative;
     display: flex;
     background-color: #ffda79;
     width: 100%;
-   align-items:stretch; 
+    align-items: stretch;
 
 
-.nav{ display: flex;
-    border-right: 2px solid black;
-    height: 5vh;
-    width: 12vw;
-    justify-content: center;
-    font-family: 'Arvo', serif;
-    font-family: 'Comforter Brush', cursive;
-    font-family: 'M PLUS Code Latin', sans-serif;
-    font-weight: bold;
+    .nav {
+        display: flex;
+        border-right: 2px solid black;
+        height: 5vh;
+        width: 12vw;
+        justify-content: center;
+        font-family: 'Arvo', serif;
+        font-family: 'Comforter Brush', cursive;
+        font-family: 'M PLUS Code Latin', sans-serif;
+        font-weight: bold;
+    }
+
+    h1 {
+        color: #1e272e;
+        font-family: 'Comforter Brush', cursive;
+        font-family: 'M PLUS Code Latin', sans-serif;
+        font-size: 40px;
+        font-stretch: ultra-condensed;
+    }
+
+    .nav:hover {
+        cursor: pointer;
+        border-bottom: 3px solid black;
+        transition: 0.2s;
+    }
 }
-h1{
-    color: #1e272e;
-    font-family: 'Comforter Brush', cursive;
-    font-family: 'M PLUS Code Latin', sans-serif;
-    font-size: 40px;
-    font-stretch: ultra-condensed;
-}
-.nav:hover{
-    cursor: pointer;
-    border-bottom: 3px solid black;
-    transition: 0.2s;
-}
-}
-.main-articles{
+
+.main-articles {
     display: grid;
-    grid-template-columns:repeat(4,1fr);
-    grid-template-rows: repeat(2,1fr);
-    
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
     width: 90vw;
     height: 70vh;
     gap: 10px;
     padding: 3vw;
 }
 
-    .bigarticle{grid-row: span 2;
-        grid-column: span 2;
-        
-    }
-    .bigarticle>img{
-        width: 100%;
-        height: 100%;
-    }
+.bigarticle {
+    grid-row: span 2;
+    grid-column: span 2;
 
-    .article{
-        border: 1px solid black;
-    }
-    img{
-        width: 100%;
-        height: 100%;
-    }
+}
+
+.bigarticle>img {
+    width: 100%;
+    height: 100%;
+}
+
+.article {
+    border: 1px solid black;
 
 
-    
-   
+}
 
-    
-
-    
-
-
-
-
+img {
+    width: 100%;
+    height: 100%;
+}
