--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/style.scss
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/style.scss
@@ -38,8 +38,8 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
 
-    width: 90vw;
-    height: 70vh;
+    width: 85vw;
+    height: 60vh;
     gap: 10px;
     padding: 3vw;
 
@@ -51,9 +51,25 @@
     grid-row: span 2;
     grid-column: span 2;
 
+    p{ position: absolute;
+        top: 300px;
+        left: 90px;
+        color: rgb(253, 244, 227);
+        font-weight: bold;
+        font-size: 30px;
+    }
+    span{
+        color: brown;
+    }
+    :hover{
+        cursor: pointer;
+        
+    }
+
 img {
     width: 100%;
     height: 100%;
+}
 }
 
 
@@ -63,10 +79,23 @@ img {
     height: 100%;
 }
 
-.article {
+.article {position: relative;
     border: 1px solid black;
-
-
+    p{
+        position: absolute;
+        bottom: 2px;
+        left: 30px;
+        font-size: 20px;
+        color: rgb(238, 227, 211);
+        font-weight: bold;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    span{
+        color: brown;
+    }
+    :hover{
+        cursor: pointer;
+    }
 }
 
 img {
