--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -143,14 +143,20 @@ body {
     grid-template-rows: reapeat(4, 1fr);
 
     &__title {
-        background-color: antiquewhite;
-        width: 100px;
-        height: 100px;
+        border: 1px solid black;
+        position: relative;
+        grid-row-end: 4;
+        grid-row-start: 1;
+        grid-column-start: 1;
+        grid-column-end: 4;
+        width: 100%;
+        height: 100%;
     }
 
     &__option {
-        background-color: antiquewhite;
+        border: 1px solid black;
         width: 100px;
         height: 100px;
+        padding: 10px;
     }
 }
