--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/style.scss
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/style.scss
@@ -6,7 +6,7 @@
     align-items: stretch;
 
 
-    .nav {
+    .main-menu__nav {
         display: flex;
         border-right: 2px solid black;
         height: 5vh;
@@ -18,7 +18,7 @@
         font-weight: bold;
     }
 
-    h1 {
+    .main-menu__headline {
         color: #1e272e;
         font-family: 'Comforter Brush', cursive;
         font-family: 'M PLUS Code Latin', sans-serif;
@@ -26,7 +26,7 @@
         font-stretch: ultra-condensed;
     }
 
-    .nav:hover {
+    .main-menu__nav:hover {
         cursor: pointer;
         border-bottom: 3px solid black;
         transition: 0.2s;
@@ -46,12 +46,12 @@
 
 }
 
-.bigarticle {
+.main-articles__bigarticle {
     position: relative;
     grid-row: span 2;
     grid-column: span 2;
 
-    p{ position: absolute;
+    .main-articles__text{ position: absolute;
         top: 300px;
         left: 90px;
         color: rgb(253, 244, 227);
@@ -74,14 +74,14 @@ img {
 
 
 
-.bigarticle>img {
+.main-articles__bigarticle>img {
     width: 100%;
     height: 100%;
 }
 
-.article {position: relative;
+.main-articles__article {position: relative;
     border: 1px solid black;
-    p{
+  .article__text{
         position: absolute;
         bottom: 2px;
         left: 30px;
