--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -136,27 +136,26 @@ body {
 }
 
 /* Service-Page */
-
+h1 {
+    text-align: center;
+    margin-top: 100px;
+}
 .serviceGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: reapeat(4, 1fr);
-
-    &__title {
-        border: 1px solid black;
-        position: relative;
-        grid-row-end: 4;
-        grid-row-start: 1;
-        grid-column-start: 1;
-        grid-column-end: 4;
-        width: 100%;
-        height: 100%;
-    }
+    margin: 150px;
+    gap: 10px;
+    justify-content: center;
 
     &__option {
         border: 1px solid black;
-        width: 100px;
-        height: 100px;
+        width: 50%;
+        height: 50%;
         padding: 10px;
+        border-radius: 7px;
+    }
+    &__option img {
+        justify-content: center;
     }
 }
