--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -98,17 +98,18 @@ a:hover{
 /*Deal page*/
 
 .dealGrid{
-    margin-top:30px;
+    
     display:grid;  
-    border:black 2px solid;    
-    grid-template-columns: repeat(12, 130px);
-    grid-template-rows:160px 200px;
+      
+    grid-template-columns: repeat(8, 200px);
+    grid-template-rows:200px 290px;
     justify-content: center;
      
     &__runner{
     
-        grid-column:span 12;
-        border:black 2px solid;    
+        grid-column:span 8;
+        border:rgb(190, 69, 32) 2px solid;
+        background-color:rgb(207, 104, 19);    
 
       img{
           width:100%;
@@ -116,40 +117,88 @@ a:hover{
       }  
   
     }
-    &__dealbox--dealbox1{
-     width:auto;
-     border:black 2px solid;
+    &__dealbox--dealbox1{      
+     grid-column:span 2;
+     
+    iframe{
+        height:100%;
+        width:100%;
+       
+    }
+
 
 
     }
-    &__dealbox{
-        border:black 2px solid;
+    &__dealbox{       
+        word-wrap: break-word;
+        border: rgba(0, 0, 0, 0.425) 2px solid;
+        border-radius:7px;
+        
+        
 
         img{
             width:100%;
             height:50%;
             cursor:pointer;
+            
         }
 
         p{
-
+            text-align:start;
+            padding-left:8px;
         }
 
         h4{
+            display:flex;
+            position:absolute;
+            justify-items:bottom;
             font-weight:normal;
             color:black;
+            padding-left:8px;
+            
+            
           
         }
         h3{
+                        
             color:red;
-            font-weight:normal;
+            padding-left:8px;
+            bottom:0;
+            
         }
 
     }
     
-
-
 }
+
+.dealarrowLeft{
+    background-color:rgb(250, 255, 250);
+    opacity:0.6;
+    width:30px;
+    height:80px;
+    display:flex;
+    position:absolute;
+    top:350px;
+    left:370px;
+    cursor:pointer;
+    align-items: center;
+    
+}
+
+.dealarrowRight{
+    background-color:rgb(250, 255, 250);
+    opacity:0.6;
+    width:30px;
+    height:80px;
+    display:flex;
+    position:absolute;
+    top:350px;
+    right:1px;
+    cursor:pointer;
+    align-items: center;
+    
+}
+
 
  /* Service-Page */
 
