--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -139,17 +139,20 @@ body {
 h1 {
     text-align: center;
     margin-top: 100px;
+    margin-bottom: -100px;
+    font-size: 35px;
+    font-weight: 500;
 }
 .serviceGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: reapeat(4, 1fr);
     margin: 150px;
-    gap: 10px;
+    gap: 2%;
     justify-content: center;
 
     &__option {
-        border: 1px solid black;
+        border: 1px solid rgb(151, 151, 151);
         width: 50%;
         height: 50%;
         padding: 10px;
