--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
@@ -254,6 +254,13 @@ body{
       border-radius: 5px;
        
      }
+
+     .mod:hover{
+
+      transition: 0.5s;
+      cursor: pointer;
+      opacity: 0.7;
+  }
   
     span:hover {
   
