--- a/01-HTML-CSS/06-BEM model/tamir-roi-yossi/style-bbc.scss
+++ b/01-HTML-CSS/06-BEM model/tamir-roi-yossi/style-bbc.scss
@@ -8,6 +8,8 @@ body {
 
 // NAV SECTION
 .Nav {
+    position:sticky;
+    top:0;
     width: 100%;
     height: 50px;
     display: flex;
@@ -15,49 +17,53 @@ body {
     justify-content: center;
     background-color: black;
     font-size: 18px;
-    
+
+    .logo {
+        cursor: pointer;
+    }
 
     &__BTN {
         padding: 15px 40px;
         text-align: center;
-        &--home:hover{
-            border-bottom: 4px solid rgb(255, 255, 255);
+
+        &--home:hover {
+            border-bottom: 5px solid #ffffff;
         }
-        &--news:hover{
-            border-bottom: 4px solid rgb(175, 48, 54);
+
+        &--news:hover {
+            border-bottom: 5px solid #e40505;
         }
-        &--sport:hover{
-            border-bottom: 4px solid rgb(248, 244, 7);
+
+        &--sport:hover {
+            border-bottom: 5px solid #e4c205;
         }
-        &--reel:hover{
-            border-bottom: 4px solid rgb(7, 248, 216);
+
+        &--reel:hover {
+            border-bottom: 5px solid #0bac96;
         }
-        &--worklife:hover{
-            border-bottom: 4px solid rgb(248, 144, 7);
+
+        &--worklife:hover {
+            border-bottom: 5px solid #f89007;
         }
-        &--travel:hover{
-            border-bottom: 4px solid rgb(248, 7, 248);
+
+        &--travel:hover {
+            border-bottom: 5px solid #f807f8;
         }
-        &--future:hover{
-            border-bottom: 4px solid rgb(7, 248, 19);
+
+        &--future:hover {
+            border-bottom: 5px solid #05af0d;
         }
-        &--culture:hover{
-            border-bottom: 4px solid rgb(248, 7, 7);
+
+        &--culture:hover {
+            border-bottom: 5px solid #6f69ce;
         }
-        &--more:hover{
-            border-bottom: 4px solid rgb(66, 66, 63);
+
+        &--more:hover {
+            border-bottom: 5px solid #646464;
         }
     }
 }
 
-// .Nav__BTN:hover {
-//     background-color: gray;
-//     border-bottom: 4px solid rgb(175, 48, 48);
-
-//     // &--home{
-//     //     border-bottom: 4px solid rgb(50, 48, 175);
-//     // }
-// }
 
 a {
     color: white;
@@ -66,6 +72,8 @@ a {
 }
 
 .stripe {
+    position:sticky;
+    top:50px;
     display: flex;
     align-items: center;
     height: 50px;
@@ -79,51 +87,100 @@ a {
         background-color: rgb(54, 54, 54);
     }
 
+    &--news {
+        padding-left: 11%;
+        background-color: #e40505;
+    }
+
     &--sport {
         padding-left: 11%;
         background-color: #e4c205;
     }
+
 }
 
-// NAV SECTION
+.stripe-middle {
+    display: flex;
+    align-items: center;
+    height: 25px;
+    width: 89%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 
-// SUB-CONTENT SECTION
+    &--home {
+        background-color: rgb(54, 54, 54);
+    }
+
+    &--news {
+        background-color: #e40505;
+    }
+
+    &--sport {
+        background-color: #e4c205;
+    }
+
+}
+
+
+// CONTENT
+
+.main-content {
+    display: grid;
+    grid-template-columns: 10% 40% 20% 20% 10%;
+    min-width: 850px;
+}
+
 .sub-content {
     display: grid;
     grid-template-columns: 10% 20% 20% 20% 20% 10%;
     min-width: 850px;
+}
 
-    &__img {
-        width: 100%;
-        height: auto;
-    }
+.content {
 
-    &__main-text {
-        font-size: 30px;
-        font-weight: bold;
-        color: black;
-    }
+    .main-content,
+    .sub-content {
 
-    &__sub-text {
-        font-size: 22px;
-    }
+        &__img {
+            width: 100%;
+            height: auto;
+        }
 
-    &__link {
-        text-decoration: none;
-        color: #000;
+        &__main-text {
+            font-size: 30px;
+            font-weight: bold;
+            color: black;
+        }
 
-    }
+        &__sub-text {
+            font-size: 22px;
+        }
 
-    &__link :hover {
-        color: #962828;
-        text-decoration: underline;
-    }
+        &__link {
+            text-decoration: none;
+            color: #000;
 
-    &__box {
-        padding: 10px;
+        }
 
+        &__link :hover {
+            color: #962828;
+            text-decoration: underline;
+        }
+
+        &__box {
+            padding: 10px;
+
+        }
     }
 
 }
 
-// SUB-CONTENT SECTION
+
+
+// div {
+//     border: 1px solid red;
+// }
