--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
@@ -173,7 +173,7 @@ body{
       grid-template-columns: 1fr 1fr 1fr;
       grid-auto-rows: minmax(100px, auto);
       gap: 0px;
-      background-color: gray;
+      background-color: rgb(233, 232, 232);
       margin-top: 100px;
       
       
@@ -209,6 +209,7 @@ body{
       gap: 20px;
       margin-top: 10px;
       contain: layout;
+      background-color: rgb(194, 190, 190)
   
       &__grid-2-box{
         display: flex;
