--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED-SCSS/STYLE.SCSS
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED-SCSS/STYLE.SCSS
@@ -180,177 +180,108 @@ body{
 
 
 
-  .container {
-    height: 200vh;
-    width: 98vw;
-    padding: 0px;
-    margin-left: -2px;
-
-    &__gridd-1{
-      width: 98.5vw;
-      height: 100vh;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-auto-rows: minmax(100px, auto);
-      gap: 10px;
-      background-color: gray;
-
-      &__box1-gridd-1 {
-    
-        grid-column: 1/3;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-
-        &__img{
-          width: 50%;
-          height: 100%; 
-        }
-      }
-
-      &__box2-gridd-1 .img{
-    
-        width: 100%;
-        height: 100%;
-      }
-
-      &__box4-gridd-1 .img{
-        width: 100%;
-        height: 100%;
-      }
-    
-
-      &__box3-gridd-1{
-        grid-column: 1/4;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    
-        &__img{
-          width: 50%;
-          height: 100%;
-          margin-right: -60px;
-        }
-      }
-
-      &__box5-gridd-1 {
-        grid-column: 2/4;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    
-        &__box5-gridd-1 .img{
-          width: 50%;
-          height: 100%;
-        }
-        
-      }
-    
-    }
-
-    .gridd-2 {
-      width: 98.5vw;
-      height: 100vh;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: minmax(100px, auto);
-      gap: 10px;
-      margin-top: 30px;
+.grid-1-container{
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  gap: 3px;
+  background-color: gray;
+  margin-top: 100px;
   
-      &__box1-gridd-2 {
-        grid-column: 1/3;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-      }
+  
+  &__grid-1-box{
+    display: flex;
+  }
+  
+  
+}
 
-      &__box3-gridd-2 {
-        grid-row: 2/4;
+.grid-1-box:nth-child(1){
+  grid-column: 1/3;
+}
 
-        &__img{
-          width: 100%;
-          height: 60%;
-        }
-      }
+.grid-1-box:nth-child(3){
+  grid-column: 1/4;
+}
 
-      &__box4-gridd-2 {
-        grid-column: 2/4;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    
-        &__img{
-          width: 50%;
-          height: 100%;
-        } 
-      }
+.grid-1-box:nth-child(5){
+  grid-column: 2/4;
+}
 
-      .box5-gridd-2 {
-        grid-column: 2/4;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    
-        &__img{
-          width: 50%;
-          height: 100%;
-        } 
-      }
 
-    }
-    
+  
+
+
+.grid-2-container {
+  width: auto;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  gap: 2px;
+  margin-top: 10px;
+  contain: layout;
+
+  &__grid-2-box{
+    display: flex;
+    contain: layout;
   }
 
+  .grid-2-box:nth-child(1){
+    grid-column: 1/3;
+  }
 
+  .grid-2-box:nth-child(3){
+    grid-column: 2/4;
+  }
+
+  .grid-2-box:nth-child(4){
+    grid-column: 2/4;
+  }
+
+  .grid-2-box:nth-child(5){
+    grid-column: 2/4;
+  }
+  
  
-  .img>img{
-    position: relative;
-    border-radius: 3px;
-    width: 90%;
-    height: 90%;
-    left: 30px;
-    top: 10px;
-    
   
-  }
-  .text {
-    
-    position: relative;
-    right: 20px;
-    width: 48%;
-    height: 80%;
-    margin-left: 5px;
-    margin-top: 3px;
-    cursor: pointer;
-
-    &__p{
-    
-      width: 100%;
-      height: 100%;
-    }
-    
-  }
+}
 
 
-  .textp{
-    padding: 0px;
-    margin-left: 45px;
-    margin-top: -10px;
-    width: 500px;
+.text {
+  cursor: pointer;
+  width: fit-content;
+  height: 100%;
+  margin-top: -2px;
+  margin-left: 2px;
+  padding: 5px;
+
   
-    span{
-      font-size: x-large;
-      
-      align-content: center;
-
-      span:hover {
-
-        text-decoration: underline;
-      }
   
-      
-    }
-  } 
+}
+
+.mod{
+  width: 600px;
+  height: auto;
+  border-radius: 5px;
+   
+ }
+
+span:hover {
+
+  text-decoration: underline;
+}
+
+
+span{
+  font-size: x-large;
+  
+  align-content: center;
+
+  
+}
   
 
 // Rasheed end 
