--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED-SCSS/STYLE.SCSS
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED-SCSS/STYLE.SCSS
@@ -195,21 +195,20 @@ body{
     display: flex;
   }
   
-  
-}
 
-.grid-1-box:nth-child(1){
+&__grid-1-box:nth-child(1){
   grid-column: 1/3;
 }
 
-.grid-1-box:nth-child(3){
+&__grid-1-box:nth-child(3){
   grid-column: 1/4;
 }
 
-.grid-1-box:nth-child(5){
+&__grid-1-box:nth-child(5){
   grid-column: 2/4;
 }
 
+}
 
   
 
@@ -229,19 +228,19 @@ body{
     contain: layout;
   }
 
-  .grid-2-box:nth-child(1){
+  &__grid-2-box:nth-child(1){
     grid-column: 1/3;
   }
 
-  .grid-2-box:nth-child(3){
+  &__grid-2-box:nth-child(3){
     grid-column: 2/4;
   }
 
-  .grid-2-box:nth-child(4){
+  &__grid-2-box:nth-child(4){
     grid-column: 2/4;
   }
 
-  .grid-2-box:nth-child(5){
+  &__grid-2-box:nth-child(5){
     grid-column: 2/4;
   }
   
