--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
@@ -94,7 +94,18 @@
             grid-auto-rows: minmax(auto, auto);
             gap: 1em;
             margin: auto;
-            
+            &--grid{
+                display: grid;
+                grid-template-columns: repeat(8, 1fr 1fr);
+                width: 100vw;
+            }
+            &__box{
+               
+                grid-column: 9;
+                display: grid;
+
+
+            }
             &__news{
                 display: grid;
                 grid-column: 1/3;
@@ -240,6 +251,27 @@
                     background-image: url("https://e3.365dm.com/20/08/768x432/skynews-sideman-bbc-1extra_5062530.jpg?20200808215407");
                     background-position: center;
                     background-repeat: no-repeat;
+                    &--sports{
+                        display: grid;
+                        grid-template-columns: repeat(8, 1fr 1fr);
+                        width: 100vh;
+                        img{
+                            grid-column: 1/4;
+                            grid-row: 1/4;
+                        }
+                        h2{
+                            grid-row: 0;
+                            grid-column: 6;
+                        }
+                        h3{
+                            grid-column: 6;
+                            grid-row: 2;
+                        }
+                        p{
+                            grid-row: 3;
+                            grid-column: 6;
+                        }
+                    }
                     &--news{
                        border:  5px solid red;
                     }
