--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
@@ -217,7 +217,7 @@ body{
       contain: layout;
       background-color: rgb(194, 190, 190)
   
-      &__grid-2-box{
+      &__grid-2-box {
         display: flex;
         contain: layout;
       }
@@ -226,20 +226,10 @@ body{
         grid-column: 1/3;
       }
   
-      &__grid-2-box:nth-child(3){
+      &__grid-2-box:nth-child(n + 3){
         grid-column: 2/4;
       }
-  
-      &__grid-2-box:nth-child(4){
-        grid-column: 2/4;
-      }
-  
-      &__grid-2-box:nth-child(5){
-        grid-column: 2/4;
-      }
-      
-     
-      
+   
     }
   
   
