--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
@@ -24,7 +24,7 @@
         flex-direction: row;
         background-color: red;
         font-size: 18px;
-        padding: 10px;
+        padding: 5px;
         a{
             color: white;
             padding: 10px;
@@ -36,9 +36,25 @@
             }
       }
 
-
-
-
+      &--sport_Header{
+        width: 100%;
+        height: 50px;
+        display: flex;
+        flex-direction: row;
+        background-color: orange;
+        font-size: 18px;
+        padding: 5px;
+        a{
+            color: white;
+            padding: 10px;
+            text-decoration: none;
+            text-align: center;
+          }
+          a:hover{
+            color: black;
+            }
+      }
+    
     &__logo{
         cursor: pointer; 
         width: 150px; 
@@ -79,6 +95,11 @@
 }
 .RedHeader{
     background-color: red; font-family: Arial, Helvetica, sans-serif; color: white; padding: 10px;
+    margin-bottom: 50px;
+}
+
+.OrangeHeader{
+    background-color: orange; font-family: Arial, Helvetica, sans-serif; color: white; padding: 10px;
     margin-bottom: 50px;
 }
 
