--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
@@ -178,7 +178,7 @@ body{
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-auto-rows: minmax(100px, auto);
-      gap: 0px;
+      gap: 80px;
       background-color: rgb(233, 232, 232);
       margin-top: 100px;
       
@@ -213,14 +213,13 @@ body{
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-auto-rows: minmax(100px, auto);
-      gap: 20px;
-      margin-top: 10px;
+      gap: 30px;
+      margin-top: 90px;
       contain: layout;
       background-color: rgb(194, 190, 190)
   
       &__grid-2-box {
         display: flex;
-        overflow: hidden;
         contain: layout;
       }
   
@@ -228,10 +227,18 @@ body{
         grid-column: 1/3;
       }
   
-      &__grid-2-box:nth-child(n + 3){
+      &__grid-2-box:nth-child(3){
         grid-column: 2/4;
       }
-   
+
+      &__grid-2-box:nth-child(4){
+        grid-column: 2/4;
+      }
+
+      &__grid-2-box:nth-child(5){
+        grid-column: 2/4;
+      }
+       
     }
   
   
@@ -250,7 +257,7 @@ body{
     .mod{
       width: 600px;
       height: auto;
-      border-radius: 5px;
+      border-radius: 20px;
        
      }
 
