--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
@@ -320,12 +320,9 @@
                     grid-row: 2;
                     text-align: center;
                 }
-                h3{
-                    grid-row: 3;
-                    text-align: center;
-                }
                 p{
-                    grid-row: 4;
+                    padding-top: 5px;
+                    grid-row: 3;
                     text-align: center;
                 }
                 img{
