--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
@@ -105,7 +105,9 @@ body{
 .ad--column{
     height: 30vh;
     background-color: rgb(221, 216, 216);
-    padding-block: 22vh;
+    padding-block: 40vh;
+    position: relative;
+    top: 3.5vh;
 }
 
 .navBar--news{
