--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
@@ -163,6 +163,8 @@ body{
 
 .nav--sport{
   background-color: rgb(255, 208, 0);
+  margin-bottom: 20px;
+    padding-bottom: 3px;
 
   a{
     height: 100%;
@@ -186,10 +188,15 @@ body{
 .sport--main__article--big{
   display: flex;
   flex-direction: row;
+  .text{
+    padding-left: 20px;
+  }
 }
 .sport--main{
+  justify-content: space-between;
   display: flex;
   flex-direction: row;
+  margin-right: 210px;
 .imgA img{
  height: 300px;
  width:500px ;
@@ -248,6 +255,11 @@ h3:hover{
   width: 300px;
   height: 200x;
   margin: 10px;
+  h5:hover{
+    color: rgb(42, 19, 255);
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+  }
 } 
 .sport--small__articale__row{
   display: flex;
@@ -262,61 +274,3 @@ h3:hover{
   }
 }
 
-<<<<<<< HEAD
-.sider{
-  display: flex;
-  flex-direction: column;
-  ul{
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-    padding: 0;
-  }
-  p{
-    font-weight: bold;
-  }
-  .scores__item:nth-child(3) span{
-    background-color: blue;
-  }
-  .scores__item span:nth-child(2){
-    background-color: yellow;
-  }
-}
-=======
-.nottitle{display: flex;
-flex-direction: row;
-justify-content: space-between ;
-}
-
-.ad--row2{
-  display: flex;
-flex-direction: row;
-}
-
-.news--main{width: 100vw;
-height: 14vw;
-background-color: rgb(110, 151, 147);
-display: grid;
-grid-template-columns: 2fr 1fr;
-grid-template-rows: 1fr;}
-
-.pic{width:35vw;
-height: 35vh;
-.img
-}
-.pic{display: grid;
-grid-template-columns: 1fr 1fr;
-grid-template-rows: 1fr;}
-
-.pic>p{position: relative;
-bottom:25vh ;
-left: 35vw;}
-
-
-.news--small{
-  margin-top: 3vh; 
-  display: flex;
-justify-content: space-between;
-margin-right: 15vw;}
->>>>>>> 70c6b43479737691f0c74505baef16baba3f6a33
