amazon deal page

--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -145,7 +145,7 @@ body {
         grid-column: span 2;
         border:black 2px solid;
 
-        img{
+        video{
             height: 100%;
             width: 100%;
         }
