--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
@@ -321,7 +321,7 @@ body {
     flex-direction: row;
   }
 
-  <<<<<<< HEAD=======
+ 
 }
 
 .sport--small__articale__row {
@@ -329,7 +329,7 @@ body {
   flex-direction: row;
 }
 
->>>>>>>Stashed changes
+
 
 /*asdasdasd*/
 .navBar--news {
@@ -338,11 +338,8 @@ body {
   height: 100px;
 }
 
-=======<<<<<<< Updated upstream
-/*asdasdasd*/
 
-
->>>>>>>24b6b0029e7c46780d8b09fa8aa5741d395bc2bc=======.nottitle {
+.nottitle {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -423,4 +420,3 @@ body {
   grid-template-rows: 1fr 1fr;
 }
 
->>>>>>>Stashed changes
