--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
@@ -211,7 +211,7 @@ body {
   display: flex;
   flex-direction: row;
 
-  <<<<<<< Updated upstream .text {
+   .text {
     padding-left: 20px;
   }
 }
@@ -230,13 +230,13 @@ body {
   .imgB img {
     height: 150px;
     width: 250px;
-    =======justify-content: space-evenly;
+    justify-content: space-evenly;
   }
 
   .sport--main__article--big {
     display: flex;
     flex-direction: row;
-    >>>>>>>Stashed changes
+    
   }
 
   .sport--main {
@@ -309,7 +309,7 @@ body {
     height: 200x;
     margin: 10px;
 
-    <<<<<<< Updated upstream h5:hover {
+     h5:hover {
       color: rgb(42, 19, 255);
       text-decoration-line: underline;
       text-decoration-style: solid;
