--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
@@ -310,6 +310,7 @@ body {
     margin: 10px;
 
      h5:hover {
+       
       color: rgb(42, 19, 255);
       text-decoration-line: underline;
       text-decoration-style: solid;
@@ -420,3 +421,13 @@ body {
   grid-template-rows: 1fr 1fr;
 }
 
+.sport--small__articale{
+  img{
+    height: 200px;
+    width: 300px;
+  }
+}
+.list-inline{
+  display: flex;
+  flex-direction: row;
+}
