--- a/01-HTML-CSS/07-SCSS/RASHEED/style.scss
+++ b/01-HTML-CSS/07-SCSS/RASHEED/style.scss
@@ -1,9 +1,27 @@
 .wrapper{
     display: flex;
     width: 100%;
-    height: 200px;
-    border:solid gray 1px;
-    background-color: green;
-    border-radius: 10px;
+    box-sizing: border-box;
+    margin: 100px;
+    padding: 100px;
+    
+    &__wrapper_box{
+        width: 60%;
+        height: 250px;
+        margin: 50px;
+        padding: 100px;
+    
+        &__img{
+            display: block;
+            height: 50px;
+            width: 10px;
+            align-items: center;
+            border-radius: 50%;
+            margin-left: 50px;
+        }
+        
+    }
+    
     
 }
+
