--- a/01-HTML-CSS/07-SCSS/RASHEED/style.scss
+++ b/01-HTML-CSS/07-SCSS/RASHEED/style.scss
@@ -4,18 +4,26 @@
     padding: 50px;
     
     .wrapper_box{
-        width: 100%;
-        height: 50px;
-        margin: 50px;
-        padding: 50px;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 10px;
+        width: 30%;
+        padding: 10px;
     
         &__img{
             display: block;
-            height: 50px;
-            width: 10px;
             align-items: center;
             border-radius: 50%;
-            margin-left: 50px;
+
+        }   
+        &__text{
+            font-size: small;
+            font-weight: bold;
+            text-align: center;
+           
+            
         }
         
     }
