--- a/01-HTML-CSS/07-SCSS/RASHEED/style.scss
+++ b/01-HTML-CSS/07-SCSS/RASHEED/style.scss
@@ -18,7 +18,7 @@
             border-radius: 50%;
 
         }   
-        &__text{
+        &__wraper__box__text{
             font-size: small;
             font-weight: bold;
             text-align: center;
