--- a/01-HTML-CSS/07-SCSS/IdoGino/lala.scss
+++ b/01-HTML-CSS/07-SCSS/IdoGino/lala.scss
@@ -52,26 +52,19 @@
             grid-row: 4;
             font-size: 10px;
         }
-        
         p{
             grid-row: 8;
         }
-
         &_stars{
             height: 10vh;
             grid-row: 7;
 
-            span{
-                color: yellow;
-            }
-
         }
-        
-
-
-
-        
-
     }
 }
+
+.checked{
+        color: yellow;
+    }
 }
+
