--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
@@ -208,11 +208,12 @@ body {
 
 /*podcast page style*/
 .logoimg {
-    left: 33vw;
-    top: 25vh;
-    width: 104%;
-    height: 100%;
+    left: 40vw;
+    top: 40vh;
+    width: 10vw;
+    height: 10vh;
     position: absolute;
+    z-index: -1;
 }
 
 .watch {
@@ -222,9 +223,12 @@ body {
 }
 
 .text {
+    position: relative;
     color: rgba(255, 255, 255, .9);
     font-size: 20px;
+    top: 20vh;
     line-height: 1.75em;
     text-align: center;
     white-space: pre-wrap;
+    z-index: 1;
 }
