--- a/01-HTML-CSS/07-SCSS/LIOR/style.scss
+++ b/01-HTML-CSS/07-SCSS/LIOR/style.scss
@@ -1,32 +1,37 @@
 body
 {
-background-color: rgb(175, 240, 181);
-height: 50vh;
+background-color: rgb(25, 211, 43);
+height: 100vh;
 width: 100%;
+border-color: 5px solid black;
+
 }
+
 
 .warrper
 {
-    height: 50vh;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    height: 150vh;
+    display: grid;
+    grid-template-columns: repeat(3,1fr) ;
+    grid-template-rows: repeat(3,350px);
+    grid-gap: 1em;
+    grid-column: 1/3;
 }
+
 
 .card
 {
-    display: flex;
-    flex-direction: column;
     padding: 5px;
-    width: 30%;
-    height: 15vh;
+    width: 100%;
+    height: 100%;
     align-content: center;
-    border-color: 2px solid black;
+    border: 5px solid black;
+    gap: 10px  ;
 
     &__picture
     {
-        height: 100%;
+        height: 30%;
         align-content: center;
         background-size: contain;
     }
@@ -34,14 +39,14 @@ width: 100%;
 
     &__description
     {
-        font-size: 50px;
+        font-size: 10px;
         text-align: center;
         font-style: italic;
     }
 
     &__price
     {
-        font-size: 50px;
+        font-size: 10px;
         text-align: center;
         font-style: italic;
     }
