--- a/01-HTML-CSS/07-SCSS/Roi/style.scss
+++ b/01-HTML-CSS/07-SCSS/Roi/style.scss
@@ -2,12 +2,15 @@ body {
     background-color: black;
     font-family:Arial, Helvetica, sans-serif;
 }
-.SideMenu {
+.SideWrapper {
 width: 10vw;
 height: 100vh;
 background-color:rgb(49, 47, 47);
-.Music {
- color: white;
+&__MainLogo {
+    width: 50px;
+    height: 25px;
+
 }
+
 }
 
