--- a/01-HTML-CSS/07-SCSS/yahya/style2.scss
+++ b/01-HTML-CSS/07-SCSS/yahya/style2.scss
@@ -1,23 +1,68 @@
 body{
-   background-color: #999;
-  
+   background-color: #504A4B;
+   padding: 5px;
    
    
 }
+a{
+   font-size: xx-large;
+   background-color: black;
+   margin-top: 0%;
+   color: white;
+   border-radius: 5px;
+   text-decoration: none;
+   width: 200px;
+   justify-content: center;
+   align-items: center;
+   grid-auto-rows: minmax(100px,auto);
+}
+p{
+   font-size: xx-large;
+   background-color: black;
+   margin-top: 0%;
+   color: white;
+   border-radius: 5px;
+   text-decoration: none;
+   width: 200px;
+   justify-content: center;
+   align-items: center;  
+}
 .header{
    display: block;
-   background-color: coral;
+   background-color: #0C090A;
   justify-content: end;
   font-size: 40px;
   height: 80px;
+  margin: 10px;
+  border-radius: 10px ;
+  border: 2px white solid;
   
-  
-   a:hover{
-    color: black;
-     text-align: italic;
-   }   
+   
    ul{
+      
+      text-align: italic;
+   }
+   a:hover{
+
       color: black;
+      text-align: italic;
+      color: white;
+      justify-self:center;
+    }   
+   }
+.menu2{
+   display: flex;
+   flex-wrap: wrap;
+   height: 50px;
+   text-align: end;
+   justify-content: end;
+   font-size: xx-large;
+
+   .box{
+      border: solid black;
+      background-color: #999;
+      width: 500px;
+      margin: 10px;
    }
 }
 .main{
@@ -28,11 +73,30 @@ body{
    grid-template-rows: repeat(2,400px);
    gap: 100px 100px;
    justify-content: center;
+   
    .box{
       background-color:blue;
       border-radius: 15px;
+   
    }
- 
+
+
+  img{
+    height: 400px;
+    width: 400px;
+    border-radius: 15px;
+ }
+ .box.gmain{
+    background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9txMzQEEp96WevaMNZW-IK_31_E-wmZY6CQ&usqp=CAU');
+    grid-column-start: 1;
+    grid-column-end:3 ;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+   background-size: cover;
+    
+ }
  
 }
  
@@ -43,13 +107,17 @@ body{
    grid-template-rows: repeat(2,400px);
    gap: 100px 100px;
    justify-content: center;
-  
+   margin-top: 300px;
    
    .box{
       background-color:blue;
       border-radius: 15px;
    }
-
+   img{
+      height: 400px;
+      width: 400px;
+      border-radius: 15px;
+   }
 }
 .num2{
    display: grid;
@@ -58,12 +126,17 @@ body{
    grid-template-rows: repeat(2,400px);
    gap: 100px 100px;
    justify-content: center;
+   margin-top: 300px;
    
    .box{
       background-color:blue;
       border-radius: 15px;
    }
-
+   img{
+      height: 400px;
+      width: 400px;
+      border-radius: 15px;
+   }
 }
 .num3{
    display: grid;
@@ -72,12 +145,16 @@ body{
    grid-template-rows: repeat(2,400px);
    gap: 100px 100px;
    justify-content: center;
-   
+   margin-top: 300px;
    .box{
       background-color:blue;
       border-radius: 15px;
    }
-
+   img{
+      height: 400px;
+      width: 400px;
+      border-radius: 15px;
+   }
 }
 .num4{
    display: grid;
@@ -86,14 +163,30 @@ body{
    grid-template-rows: repeat(2,400px);
    gap: 100px 100px;
    justify-content: center;
-   
+   margin-top: 300px;
    .box{
       background-color:blue;
       border-radius: 15px;
    }
-
+   img{
+      height: 400px;
+      width: 400px;
+      border-radius: 15px;
+   }
 }
 h1{
    justify-content: end;
    color: brown;
+   font-size: xx-large;
+   margin-top: 100px;
+}
+.copyright{
+   width:100%;
+   background-color: black;
+   color: #fff;
+   padding: 5px;
+   text-align: end;
+   font-size: large;
+   margin-top: 50px;
+
 }
